fixed about section overflow

--- a/shuttler/src/components/AboutCard/AboutCard.css
+++ b/shuttler/src/components/AboutCard/AboutCard.css
@@ -1,32 +1,28 @@
-
-.wrapper{
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: 1fr .25fr 1fr;
-    box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    border-radius: 5px;
-    padding-left: 20px;
-    padding-right: 20px;
-    height: 100%;
-    
+.wrapper {
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: 1fr 0.25fr 1fr;
+  box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  border-radius: 5px;
+  padding-left: 20px;
+  padding-right: 20px;
+  height: 100%;
 }
-@media only screen and (max-width: 650px) {
-    .card{
-        padding-top: 30px;
-    }
+@media only screen and (max-width: 862px) {
+  .card {
+    padding-top: 30px;
+  }
 }
-.wrapper img{
-    margin: auto;
-    
+.wrapper img {
+  margin: auto;
 }
-.header{
-    text-align: center;
+.header {
+  text-align: center;
 }
-.text{
-    text-align: center;
+.text {
+  text-align: center;
 }
-.card{
-    padding-left: 30px;
-    padding-right: 30px;
-    
+.card {
+  padding-left: 30px;
+  padding-right: 30px;
 }
